// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Router Common.BaseMixin props test 01 - id props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 01 - id props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 02 - name props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 02 - name props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 03 - tooltip props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 03 - tooltip props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 04 - className props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 04 - className props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 05 - style props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 05 - style props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 06 - mainAttrs props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 06 - mainAttrs props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 07 - noIndex props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.BaseMixin props test 07 - noIndex props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.CcrWriterMixin props test01 - ccrKey props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.CcrWriterMixin props test01 - ccrKey props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 01 - hidden props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 01 - hidden props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 02 - disabled props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 02 - disabled props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 03 - selected props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 03 - selected props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 04 - controlled props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.ElementaryMixin props test 04 - controlled props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.PureRenderMixin props test 01 - pureRender props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Common.PureRenderMixin props test 01 - pureRender props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test basePath="/uu-dockitg01-main/12345-890890908" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test className="my-classname" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test controlled=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test controlled=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test default props 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test disabled=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test disabled=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test hidden=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test hidden=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test id="myId" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test mainAttrs=undefined 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test name="myName" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test noIndex=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test noIndex=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test notFoundRoute={"key":null,"ref":null,"props":{"id":null,"name":null,"tooltip":null,"className":null,"style":null,"mainAttrs":null,"parent":null,"ref_":null,"noIndex":false,"hidden":false,"disabled":false,"selected":false,"controlled":true,"params":null},"_owner":null,"_store":{}} 1`] = `
<Fragment>
  <NotFoundRoute
    key=".0"
    params={
      Object {
        "requestedRoute": "welcome",
      }
    }
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test pureRender=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test pureRender=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test route={"key":null,"ref":null,"props":{"content":"initial route","id":null,"name":null,"tooltip":null,"className":null,"style":null,"mainAttrs":null,"parent":null,"ref_":null,"noIndex":false,"hidden":false,"disabled":false,"selected":false,"controlled":true,"params":null},"_owner":null,"_store":{}} 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test selected=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test selected=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test showNotFoundRouteInUrl=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test showNotFoundRouteInUrl=null 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test showNotFoundRouteInUrl=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test strictProps=false 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test strictProps=true 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test style="padding:8px; borderRadius: 2px" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test style={"backgroundColor":"red","color":"blue"} 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test test 01 - routes props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test test 01 - routes props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test tooltip="My Tooltip" 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router Test Tool API test urlBuilder=[Function] 1`] = `
<Fragment>
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 01 - default props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 02 - basePath props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 02 - basePath props 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 03 - notFoundRoute props 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 04 - route props 1`] = `
<Fragment>
  <UU5.About
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 05 - routes props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 05 - routes props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 06 - urlBuilder props 1`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router props test 06 - urlBuilder props 2`] = `
<Fragment>
  <UU5.Home
    key=".0"
    params={Object {}}
  />
  <ForwardRef
    controlled={false}
    key=".1"
    location="portal"
    ref_={[Function]}
  />
</Fragment>
`;
